--- a/package.json
+++ b/package.json
@@ -18,19 +18,17 @@
     "classnames": "2.2.0",
     "fbjs": "0.2.1",
     "font-awesome": "4.4.0",
-    "history": "1.17",
+    "history": "^1.17.0",
     "lodash": "3.10.1",
-    "material-ui": "0.13.1",
-    "react": "0.14.2",
-    "react-addons-create-fragment": "0.14.2",
-    "react-addons-pure-render-mixin": "0.14.2",
-    "react-addons-transition-group": "0.14.2",
-    "react-addons-update": "0.14.2",
-    "react-bootstrap": "0.27.2",
-    "react-dom": "0.14.2",
-    "react-router": "*",
-    "react-tap-event-plugin": "0.2.0",
-    "uuid": "2.0.1"
+    "react": "15.2.1",
+    "react-dom": "15.2.1",
+    "react-markdown": "^2.4.2",
+    "react-modal": "^1.6.4",
+    "react-router": "2.6.1",
+    "fbemitter": "2.0.2",
+    "flux": "2.1.1",
+    "history": "2.1.2",
+    "immutable": "3.8.1"
   },
   "devDependencies": {
     "chalk": "1.1.1",
@@ -44,12 +42,12 @@
     "react-hot-loader": "1.3.0",
     "style-loader": "0.12.4",
     "svg-loader": "0.0.2",
-    "ts-loader": "0.7.2",
     "tslint": "3.2.1",
-    "typescript": "1.7",
-    "url-loader": "0.5.6",
-    "webpack": "1.12.2",
-    "webpack-dev-server": "1.12.0"
+    "ts-loader": "0.8.2",
+    "typedoc-default-themes": "^0.4.0",
+    "typescript": "2.0.3",
+    "webpack": "1.13.1",
+    "webpack-dev-server": "1.14.1"
   },
   "repository": {
     "type": "git",
