--- a/package.json
+++ b/package.json
@@ -4,66 +4,28 @@
   "description": "Seed for building React app using Typescript and Webpack",
   "main": "src/main.js",
   "scripts": {
-    "start": "webpack-dev-server --inline --hot --TARGET=DEV",
-    "build": "webpack && node server.js",
-    "dist": "webpack --TARGET=DIST && node server.js --TARGET=DIST",
-    "ci": "npm run test && webpack",
-    "lint": "tslint src/**/*.ts",
-    "test": "npm run lint"
+    "start": "webpack && node server.js"
   },
   "dependencies": {
-    "axios": "0.7.0",
-    "bluebird": "2.10.2",
-    "bootswatch": "3.3.5",
-    "classnames": "2.2.0",
-    "fbjs": "0.2.1",
-    "font-awesome": "4.4.0",
-    "history": "^1.17.0",
-    "lodash": "3.10.1",
+    "express": "^4.14.0",
+    "express-http-proxy": "^0.10.1",
+    "flux": "2.1.1",
+    "history": "2.1.2",
+    "immutable": "3.8.1",
     "react": "15.2.1",
     "react-dom": "15.2.1",
     "react-markdown": "^2.4.2",
     "react-modal": "^1.6.4",
-    "react-router": "2.6.1",
-    "fbemitter": "2.0.2",
-    "flux": "2.1.1",
-    "history": "2.1.2",
-    "immutable": "3.8.1"
+    "react-router": "2.6.1"
   },
   "devDependencies": {
-    "chalk": "1.1.1",
     "clean-webpack-plugin": "0.1.3",
     "connect": "3.4.0",
-    "css-loader": "0.20.1",
-    "file-loader": "0.8.4",
-    "html-webpack-plugin": "1.6.2",
-    "minimist": "1.2.0",
-    "open-browser-webpack-plugin": "0.0.1",
     "react-hot-loader": "1.3.0",
-    "style-loader": "0.12.4",
-    "svg-loader": "0.0.2",
     "tslint": "3.2.1",
     "ts-loader": "0.8.2",
-    "typedoc-default-themes": "^0.4.0",
     "typescript": "2.0.3",
     "webpack": "1.13.1",
     "webpack-dev-server": "1.14.1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tomastrajan/react-typescript-webpack.git"
-  },
-  "keywords": [
-    "react",
-    "webpack",
-    "typescript",
-    "seed",
-    "flux"
-  ],
-  "author": "Tomas Trajan <tomas.trajan@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/tomastrajan/react-typescript-webpack/issues"
-  },
-  "homepage": "https://github.com/tomastrajan/react-typescript-webpack#readme"
+  }
 }
