--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "webpack && node server.js"
   },
   "dependencies": {
-    "express": "^4.14.0",
+    "body-parser": "^1.16.0",
+    "express": "*",
     "express-http-proxy": "^0.10.1",
+    "express-session": "^1.14.2",
     "flux": "2.1.1",
     "history": "2.1.2",
     "immutable": "3.8.1",
@@ -16,7 +18,10 @@
     "react-dom": "15.2.1",
     "react-markdown": "^2.4.2",
     "react-modal": "^1.6.4",
-    "react-router": "2.6.1"
+    "react-router": "2.6.1",
+    "session": "^0.1.0",
+    "superagent": "*",
+    "twitter": "^1.7.0"
   },
   "devDependencies": {
     "clean-webpack-plugin": "0.1.3",
